# flexloop-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
admin-ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx
alembic/: env.py
data/: exercise_details.json  exercises_core.json
deploy/: Caddyfile  README.md  agent-runbook.md  flexloop.service
docs/: FlexLoop_PRD.md
docs/smoke-tests/: smoke-test-checklist.md  (+7 more)
evals/: runner.py  test_profiles.json
prompts/: manifest.json
scripts/: seed_exercise_details.py
tests/: conftest.py  test_adapter_streaming.py  test_adapter_tool_use.py  test_admin_admin_users.py  test_admin_ai_dashboard.py  test_admin_ai_usage.py  test_admin_audit.py  test_admin_auth.py  test_admin_backup.py  test_admin_codex_status.py  test_admin_config.py  test_admin_crud_helpers.py  test_admin_exercises.py  test_admin_health.py  test_admin_log_handler.py  test_admin_logs.py  test_admin_measurements.py  test_admin_plans.py  test_admin_plans_days.py  test_admin_playground.py  test_admin_pricing.py  test_admin_prompt_service.py  test_admin_prompts.py  test_admin_prs.py  test_admin_triggers.py  test_admin_users.py  test_admin_workouts.py  test_ai_adapters.py  test_ai_coach.py  test_ai_factory.py  test_ai_openai_adapter_refactor.py  test_api_ai.py  test_api_exercises.py  test_api_export.py  test_api_measurements.py  test_api_profiles.py  test_api_sync.py  test_api_templates.py  test_api_workouts.py  test_backup.py  (+24 more)
(+191 files in other folders)
